<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/findTitle"
        android:layout_marginTop="20dp"
        android:textColor="#1C86EE"
        android:textSize="30sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:padding="2dp"
                android:text="@string/phone"
                android:textSize="25sp" />

            <EditText
                android:id="@+id/find_phone"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/white_bg"
                android:gravity="center"
                android:hint="@string/phoneNum" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:padding="2dp"
                android:text="@string/password"
                android:textSize="25sp" />

            <EditText
                android:id="@+id/find_password"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/white_bg"
                android:gravity="center"
                android:hint="@string/findPassword"
                android:password="true" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:paddingLeft="3dp"
            android:paddingRight="3dp" >

            <EditText
                android:id="@+id/find_verificationcode"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/white_bg"
                android:gravity="center"
                android:hint="@string/verificationcode" />

            <Button
                android:id="@+id/find_getverificationcode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:background="@null"
                android:text="@string/getverificationcode"
                android:textColor="#1C86EE" />
        </LinearLayout>

        <Button
            android:id="@+id/find_submit"
            android:layout_width="180dp"
            android:layout_height="40dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:background="#1C86EE"
            android:text="@string/findSubmit"
            android:textColor="#ffffff" />

    </LinearLayout>

</RelativeLayout>
