<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/loginbackground"
    android:padding="10dp" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="120dp"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/id_tv_username"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:padding="2dp"
                android:text="@string/phone"
                android:textSize="25sp" />

            <EditText
                android:id="@+id/id_et_phone"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/white_bg"
                android:gravity="center"
                android:hint="@string/phoneNum" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/id_tv_password"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:padding="2dp"
                android:text="@string/password"
                android:textSize="25sp" />

            <EditText
                android:id="@+id/id_et_password"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:gravity="center"
                android:password="true"
                android:background="@drawable/white_bg"
                android:hint="@string/password" />
        </LinearLayout>

        <Button
            android:id="@+id/id_btn_login"
            android:layout_width="180dp"
            android:layout_height="40dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:background="#1C86EE"
            android:text="@string/login"
            android:textColor="@color/white" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="30dp"
            >

            <Button
                android:id="@+id/id_btn_forgetpassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@null"
                android:text="@string/forgetPassword"
                android:textColor="#1C86EE" />

            <Button
                android:id="@+id/id_btn_create"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@null"
                android:layout_alignParentRight="true"
                android:text="@string/registertitle"
                android:textColor="#1C86EE" />

        </RelativeLayout>
    </LinearLayout>

</RelativeLayout>