<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/id_tv_registertitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/registertitle"
        android:textColor="#1C86EE"
        android:textSize="30sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="120dp"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/create_tv_phonenumber"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:padding="2dp"
                android:text="@string/phone"
                android:textSize="25sp" />

            <EditText
                android:id="@+id/new_phone"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/white_bg"
                android:gravity="center"
                android:hint="@string/phoneNum" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/create_tv_password1"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:padding="2dp"
                android:text="@string/password"
                android:textSize="25sp" />

            <EditText
                android:id="@+id/new_password_1"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/white_bg"
                android:gravity="center"
                android:hint="@string/password"
                android:password="true" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/create_tv_password2"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:padding="2dp"
                android:text="@string/password"
                android:textSize="25sp" />

            <EditText
                android:id="@+id/new_password_2"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/white_bg"
                android:gravity="center"
                android:hint="@string/password2"
                android:password="true" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" 
            android:layout_marginTop="10dp"
            android:paddingLeft="3dp"
            android:paddingRight="3dp">

            <TextView
                android:id="@+id/tv_choose"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textSize="20sp"
                android:gravity="center_vertical"
                android:text="请选择学校" />

            <Spinner
                android:id="@+id/spinner_school"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >
            </Spinner>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:paddingLeft="3dp"
            android:paddingRight="3dp" >

            <EditText
                android:id="@+id/id_et_verificationcode"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/white_bg"
                android:gravity="center"
                android:hint="@string/verificationcode" />

            <Button
                android:id="@+id/btn_getverificationcode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:background="@null"
                android:text="@string/getverificationcode"
                android:textColor="#1C86EE" />
        </LinearLayout>

        <Button
            android:id="@+id/new_btn_submit"
            android:layout_width="180dp"
            android:layout_height="40dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:background="#1C86EE"
            android:text="@string/submit"
            android:textColor="#ffffff" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal" >

            <Button
                android:id="@+id/btn_BackToLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@null"
                android:text="@string/backToLogin"
                android:textColor="#1C86EE" />
        </RelativeLayout>
    </LinearLayout>

</RelativeLayout>