<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/id_ll"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/pic"
            android:layout_width="70dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="15dp"
            android:background="@color/gainsboro"
            android:contentDescription="@string/desc"
            android:src="@mipmap/ic_launcher" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginRight="10dp"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal"
                android:text="@string/title"
                android:textSize="26sp" />

            <TextView
                android:id="@+id/content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/content"
                android:textSize="17sp" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>